--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,63 @@ body{
 	font-weight: 300;
 	margin-bottom: 51px;
 }
+.section-home-two p{
+	color: #323232;
+	font-size: 17px;
+	line-height: 28px;
+	font-weight: 300;
+}
 .section-home-two .full-content-image img{
 	width: 100%;
 }
 .section-home-two .content-image img{
 	width: 100%;
+}
+.section-home-three h2{
+	color: #ee3668;
+	font-size: 48px;
+	line-height: 48px;
+	text-align: center;
+	font-weight: 300;
+	margin-bottom: 51px;
+}
+.section-home-three h3{
+	font-size: 24px;
+	line-height: 34px;
+	font-weight: 300;
+	margin-bottom: 10px;
+}
+.section-home-three h3 a{
+	color: #323232
+}
+.section-home-three p{
+	color: #323232;
+	font-size: 15px;
+	line-height: 25px;
+	font-weight: 300;
+}
+.section-home-three article{
+	margin-bottom: 81px;
+}
+/****************************************/
+.section-home-four{
+	background-color: #ea6c2f;
+	color: white;
+}
+.section-home-four h5{
+	text-transform: uppercase;
+	font-size: 24px;
+	font-weight: 900;
+	margin-top: 39px;	
+}
+.section-home-four p{
+	font-size: 18px;
+	margin-top: 2px;
+}
+h4{
+	font-family: 'Georgia', serif;
+	font-size: 26px;
+	font-weight: 400;
+	font-style: italic;
+	line-height: 36px
 }
