--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@ body{
 	background: #484c55 !important; 
 }
 /***************************************/
-.section-hone-two{
+.section-home-two{
+	margin-top: 445px;
 	padding-top: 87px;
 }
 .section-home-two h2{
