--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body{
 }
 /***************************************/
 .section-home-two{
-	margin-top: 445px;
+	//margin-top: 445px;
 	padding-top: 87px;
 }
 .section-home-two h2{
