--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,16 @@ body{
 	margin-bottom: 0px;
 }
 /**********************************************/
+#navbar-top{
+	display: none;
+}
 .navbar{
 	border-radius: 0px;
 	margin-bottom: 0px;
 	padding: 0px;
 	border: none !important;
 	background-color: #2b2e33;
-	box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
 }
 .navbar .navbar-nav{
 	font-weight: 400;
@@ -67,10 +70,10 @@ body{
     line-height: 132%;
 }
 .carousel-indicators .active{
-	background-color: #333333;
+	background-color: #ee3668;
 }
 .carousel-indicators li{
-	background-color: #616161;
+	background-color: #7B7B7B;
 }
 .carousel-caption {
     bottom: 70px;
@@ -120,6 +123,7 @@ body{
 	line-height: 34px;
 	font-weight: 300;
 	margin-bottom: 10px;
+	margin-top: 7px;
 }
 .section-home-three h3 a{
 	color: #323232
@@ -132,6 +136,38 @@ body{
 }
 .section-home-three article{
 	margin-bottom: 81px;
+}
+.section-home-three .content-image{
+	position: relative;
+}
+.section-home-three .content-image img{
+	width: 100%;
+}
+.section-home-three .content-image .content-description{
+	opacity: 0;
+	position: absolute;
+    background-color: rgba(0,0,0,0.35);
+    width: 100%;
+    height: 100%;
+    padding: 20px 15px;
+    bottom: 0px;
+    color: white;
+    -webkit-transition: all .50s;
+       -moz-transition: all .50s;
+        -ms-transition: all .50s;
+         -o-transition: all .50s;
+            transition: all .50s;
+}
+.section-home-three .content-image .content-description img{
+	position: absolute;    
+	top: 50%;
+	left: 50%;
+	width: 60px;
+	margin-top: -30px;
+	margin-left: -30px;
+}
+.section-home-three .content-image .content-description:hover{
+	opacity: 1;
 }
 /****************************************/
 .section-home-four{
@@ -157,6 +193,31 @@ h4{
 	font-weight: 400;
 	font-style: italic;
 	line-height: 36px
+}
+/********************************************/
+.call-to-action{
+	margin-top: 25px;
+}
+.call-to-action .btn{
+	font-size: 23px;
+	font-weight: 300;
+	display: inline-block;
+    padding: 5px 40px;
+    color: #fff;
+    background: #00a1df;
+    text-align: center;
+    text-transform: capitalize;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 26px;
+    -webkit-transition: all .40s;
+       -moz-transition: all .40s;
+        -ms-transition: all .40s;
+         -o-transition: all .40s;
+            transition: all .40s;
+}
+.call-to-action .btn:hover{
+	background: #ee3668;
 }
 /********************************************/
 footer{
